# solo

./: CMakeLists.txt  README.md
esp32/: device.c
fido2/: data_migration.c  device.c  version.c
targets/esp32/: app.h  device.c
